--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <h3 class="skills_subtitle">Tools/Others</h3>
                     <span class="skills_name"><img src="img/postman.png" alt=""><br>Postman</span>
                     <span class="skills_name"><img src="img/github.png" alt=""><br>Github</span>
-                    <span class="skills_name"><img src="img/github.png" alt=""><br>Git</span>
+                    <span class="skills_name"><img src="img/git.png" alt=""><br>Git</span>
                     <span class="skills_name"><img src="img/canva.png" alt=""><br>Canva</span>
                     
                 </div>
